--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myapp">
+    package="com.example.mymedia">
 
     <!-- Add this line to allow internet access -->
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:label="myapp"
+        android:label="MyMedia"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         
